@@ -2,6 +2,8 @@ ChangeLog for the Qt GUI to Astrophotography
 
 20190914:
 	* remove some warnings
+	* fix bug in target drawing
+	* fix seg fault in SkyDrawing (caused by constellation labels)
 
 20190913:
 	* add Button for time offset to SkyDisplayWidget
